kubernetes/jetski/04-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  namespace: default
  name: websocket-headers
spec:
  headers:
    customRequestHeaders:
      Connection: "Upgrade"
      Upgrade: "websocket"
    customResponseHeaders:
      Connection: "Upgrade"
      Upgrade: "websocket"
