kubernetes/jetski/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: jetski
  labels:
    app: jetski

spec:
  replicas: 1
  selector:
    matchLabels:
      app: jetski
  template:
    metadata:
      labels:
        app: jetski
    spec:
      automountServiceAccountToken: false
      containers:
        - name: jetski
          image: ghcr.io/calfur/jetski:a59e78615a452988d1097eddfd94652f16e18f05
          ports:
            - name: web
              containerPort: 3000
