kubernetes/jetski/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroute-jetski
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jetski.calfur.dev`)
      kind: Rule
      services:
        - name: jetski
          port: 80
  tls:
    certResolver: myresolver
